[gd_scene load_steps=13 format=3 uid="uid://c11rsu0p15ipk"]

[ext_resource type="Script" path="res://world/level9.gd" id="1_uiyxd"]
[ext_resource type="Texture2D" uid="uid://cnpqxm8wbfjbv" path="res://spritesheet/Background.png" id="2_rst4t"]
[ext_resource type="Texture2D" uid="uid://b3pae3g4qct4c" path="res://spritesheet/Brick.png" id="3_o0xc1"]
[ext_resource type="PackedScene" uid="uid://b33uhc186bybt" path="res://object/player/player.tscn" id="4_646nh"]
[ext_resource type="AudioStream" uid="uid://bbh5dtpe65d15" path="res://sound/click.ogg" id="5_duf40"]
[ext_resource type="Theme" uid="uid://dj6gcnkowllwd" path="res://themenfonts/standard.tres" id="5_xj5xl"]
[ext_resource type="PackedScene" uid="uid://bnrl6nu51xc4" path="res://object/flag/flag.tscn" id="7_2804a"]
[ext_resource type="PackedScene" uid="uid://b3beaovodymuh" path="res://traps/trap_arrow.tscn" id="8_yfuft"]
[ext_resource type="PackedScene" uid="uid://c71efp0dy8vvg" path="res://plank/Stair.tscn" id="9_rxe3w"]
[ext_resource type="PackedScene" uid="uid://dt1q7dorypd8c" path="res://traps/trap_arrowslow.tscn" id="9_yo08x"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0gmwf"]
texture = ExtResource("3_o0xc1")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(21.5, -32, 22, -20, 26, -20, 25.5, 32, 32, 32, 32, -32)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-23.5, -32, -23.125, -18.875, -25.375, -19.125, -25.5, 32, -32, 32, -32, -32)

[sub_resource type="TileSet" id="TileSet_d768j"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_0gmwf")

[node name="Level" type="Node2D"]
script = ExtResource("1_uiyxd")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(686, 388)
texture = ExtResource("2_rst4t")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_d768j")
format = 2
layer_0/tile_data = PackedInt32Array(720899, 65536, 0, 720900, 65536, 0, 720901, 65536, 0, 720902, 65536, 0, 720903, 65536, 0, 720904, 65536, 0, 720905, 65536, 0, 720906, 65536, 0, 720907, 65536, 0, 720908, 65536, 0, 720909, 65536, 0, 720910, 65536, 0, 720911, 65536, 0, 720898, 0, 0, 655362, 0, 0, 589826, 0, 0, 524290, 0, 0, 458754, 0, 0, 393218, 0, 0, 327682, 0, 0, 720912, 65536, 0, 720913, 65536, 0, 720914, 65536, 0, 720915, 0, 0, 655379, 0, 0, 589843, 0, 0, 524307, 0, 0, 458771, 0, 0, 393235, 0, 0, 327699, 0, 0, 262163, 0, 0, 196627, 0, 0, 131091, 0, 0, 65555, 0, 0, 19, 0, 0, 262146, 0, 0, 196610, 0, 0, 131074, 0, 0, 65538, 0, 0, 2, 0, 0, 524304, 65536, 0, 524303, 65536, 0, 524302, 65536, 0, 524301, 65536, 0, 524300, 65536, 0, 524299, 65536, 0, 524298, 65536, 0, 524297, 65536, 0, 524296, 65536, 0, 524295, 65536, 0, 524294, 65536, 0, 524293, 65536, 0, 524292, 65536, 0, 524291, 65536, 0, 327686, 65536, 0, 327687, 65536, 0, 327688, 65536, 0, 327689, 65536, 0, 327690, 65536, 0, 327691, 65536, 0, 327692, 65536, 0, 327693, 65536, 0, 327694, 65536, 0, 327695, 65536, 0, 327696, 65536, 0, 327697, 65536, 0, 327698, 65536, 0, 131087, 65536, 0, 131086, 65536, 0, 131085, 65536, 0, 131084, 65536, 0, 131083, 65536, 0, 131082, 65536, 0, 131081, 65536, 0, 131080, 65536, 0, 131079, 65536, 0, 131078, 65536, 0, 131077, 65536, 0, 131076, 65536, 0, 131075, 65536, 0, 655365, 65536, 0)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(470, 675)

[node name="Player" parent="." instance=ExtResource("4_646nh")]
position = Vector2(261, 677)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="Player"]

[node name="Marker2D2" type="Marker2D" parent="."]
position = Vector2(264, 664)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(682, 386)
position_smoothing_enabled = true
position_smoothing_speed = 2.0

[node name="Control" type="Control" parent="Camera2D"]
layout_mode = 3
anchors_preset = 0
offset_left = -685.0
offset_top = -385.0
offset_right = 467.0
offset_bottom = 263.0
scale = Vector2(1.18776, 1.18632)
size_flags_horizontal = 8
size_flags_vertical = 10
theme = ExtResource("5_xj5xl")

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -138.0
offset_top = -90.0
offset_right = 138.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0

[node name="LevelLabel" type="Label" parent="Camera2D/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Level 9"

[node name="StartButton" type="Button" parent="Camera2D/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -27.9094
offset_top = 1.68589
offset_right = 27.0906
offset_bottom = 32.6859
grow_horizontal = 2
text = "Start"

[node name="Clicked" type="AudioStreamPlayer2D" parent="Camera2D/Control/StartButton"]
stream = ExtResource("5_duf40")

[node name="Flag" parent="." instance=ExtResource("7_2804a")]
position = Vector2(325, 92)

[node name="ArrowTrap" parent="." instance=ExtResource("8_yfuft")]
position = Vector2(1218, 677)
rotation = 3.14159

[node name="ArrowTrap4" parent="." instance=ExtResource("8_yfuft")]
position = Vector2(1222, 293)
rotation = 3.14159

[node name="ArrowTrap2" parent="." instance=ExtResource("8_yfuft")]
position = Vector2(189, 491)

[node name="Stair" parent="." instance=ExtResource("9_rxe3w")]
position = Vector2(91, 252)

[node name="Stair2" parent="." instance=ExtResource("9_rxe3w")]
position = Vector2(99, 103)

[node name="Stair3" parent="." instance=ExtResource("9_rxe3w")]
position = Vector2(86, 394)

[node name="ArrowTrap3" parent="." instance=ExtResource("9_yo08x")]
position = Vector2(188, 111)

[connection signal="dead_man" from="Player" to="." method="_on_player_dead_man"]
[connection signal="screen_exited" from="Player/VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="pressed" from="Camera2D/Control/StartButton" to="." method="_on_start_button_pressed"]
